--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,7 +26,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "sass": "^1.69.7",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
